--- a/production/kustomization.yaml
+++ b/production/kustomization.yaml
@@ -3,4 +3,6 @@ bases:
 
 images:
 - name: quay.io/dsanchor/quarkus-petclinic
-  newTag: 1.0.0
+  newTag: 1.0.1
+patchesStrategicMerge:
+  - patches/petclinic-deployment-replicas-override.yaml
